Add clear button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <button id="lighten">Brighten</button>
       <button id="erase">Eraser</button>
       <button id="random-color">Random Colorizer</button>
-      <button id="reset">Reset</button>
+      <button id="reset">Clear</button>
     </section>
     <main class="board"></main>
   </body> 
